# cocos2dGUIEditor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Classes/: AppDelegate.cpp
proj.android/: settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/res/values/: strings.xml
proj.qt/: CMakeLists.txt  README.md
proj.qt/cmake/: helpers.cmake
proj.qt/src/core/: QtAppDelegate.cpp  QtAppDelegate.h
src/: main.cpp
src/mainWindow/: mainwindow.cpp  mainwindow.h
